WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72102
[chromium] LayerRendererChromium::initialize should fail when GaphicsContext3D::makeCurrent fails
https://bugs.webkit.org/show_bug.cgi?id=72102
Summary
[chromium] LayerRendererChromium::initialize should fail when GaphicsContext3...
Nat Duca
Reported
2011-11-11 01:28:41 PST
[chromium] LayerRendererChromium::initialize should fail when GaphicsContext3D::makeCurrent fails
Attachments
Patch
(4.91 KB, patch)
2011-11-11 01:29 PST
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Patch
(4.96 KB, patch)
2011-11-12 15:33 PST
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nat Duca
Comment 1
2011-11-11 01:29:02 PST
Created
attachment 114648
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-11 17:37:30 PST
Comment on
attachment 114648
[details]
Patch
Attachment 114648
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10396601
Nat Duca
Comment 3
2011-11-12 15:33:29 PST
Created
attachment 114846
[details]
Patch
James Robinson
Comment 4
2011-11-13 20:05:56 PST
Comment on
attachment 114846
[details]
Patch R=me
WebKit Review Bot
Comment 5
2011-11-13 21:14:58 PST
Comment on
attachment 114846
[details]
Patch Clearing flags on attachment: 114846 Committed
r100099
: <
http://trac.webkit.org/changeset/100099
>
WebKit Review Bot
Comment 6
2011-11-13 21:15:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug