[chromium] LayerRendererChromium::initialize should fail when GaphicsContext3D::makeCurrent fails https://bugs.webkit.org/show_bug.cgi?id=72102

Reviewed by James Robinson.

Source/WebCore:

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::initialize):
(WebCore::LayerRendererChromium::releaseRenderSurfaceTextures):
(WebCore::LayerRendererChromium::makeContextCurrent):
* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::initializeLayerRendererOnImplThread):

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::setIsAcceleratedCompositingActive):


Canonical link: https://commits.webkit.org/88656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100099 268f45cc-cd09-0410-ab3c-d52691b4dbfc